# potatOS

./: .gitignore  Cargo.toml  Makefile.toml  README.md  kernel_target.json  run-qemu.sh  rust-toolchain.toml
.cargo/: config.toml
mikanos_usb/: Cargo.toml  Makefile.toml  build.rs
mikanos_usb/src/: cxx_support.rs  lib.rs
mikanos_usb/usb_driver/: libcxx_support.cpp  logger.cpp  rust_support.cpp  rust_support.hpp
potato_loader/: .gitignore  Cargo.toml  Makefile.toml  bootloader_target.json  run-qemu.sh  rust-toolchain.toml
potato_loader/.cargo/: config.toml
potato_loader/src/: frame_buffer.rs  lib.rs  main.rs
src/: console.rs  fixed_vec.rs  frame_buffer.rs  graphics.rs  interrupts.rs  lib.rs  logger.rs  main.rs  mouse.rs  pci.rs  sync.rs  xhc.rs
src/_interrupts/: idt.rs
src/asm/: mod.rs
src/interrupts/: mod.rs
src/utils/: bit_field.rs  fixed_vec.rs  init_once.rs  mod.rs
