[package]
name = "potatOS"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mikanos_usb = { path = "./mikanos_usb/" }
x86_64 = { version = "0.14" }

[workspace]
members = [
    "potato_loader",
]
