[package]
name = "potato_loader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
uefi = { version = "0.12.0", features = ["alloc"] }
# uefi-services = "0.8"
goblin = { version = "0.4", features = ["elf32", "elf64", "endian_fd"], default-features = false }
